appId: com.example
---
- launchApp:
    clearState: false
    stopApp: true

- runFlow:
    when:
      visible: .*isn't responding.*
    commands:
      - tapOn:
          text: Wait
          optional: true

- runFlow:
    when:
      visible: .*isn't responding.*
    commands:
      - tapOn:
          text: Close app
          optional: true
      - launchApp:
          stopApp: true

- extendedWaitUntil:
    visible:
      text: .*quiltt-connector-root.*
    timeout: 120000

- runFlow:
    when:
      visible:
        text: .*What's your email\?.*
    commands:
      - tapOn:
          text: .*What's your email\?.*
          retryTapIfNoChange: true
      - inputText: technology@quiltt.io
      - tapOn:
          text: .*(Continue|Next).*

- runFlow:
    when:
      visible:
        text: .*Enter your (passcode|code).*
    commands:
      - inputText: 000000
      - tapOn:
          text: .*(Continue|Next).*

- extendedWaitUntil:
    visible:
      text: .*quiltt-connector-root.*
    timeout: 120000

- assertVisible:
    text: .*quiltt-connector-root.*
